[gd_scene load_steps=16 format=3 uid="uid://bb2lp50sjndus"]

[ext_resource type="PackedScene" uid="uid://dipn6t27p0nap" path="res://demo/Sky-demo/demo/assets/scenes/PrimitivesCity.tscn" id="1_2bg0m"]
[ext_resource type="Shader" uid="uid://cvd0x7lon1ur6" path="res://addons/sky_3d/shaders/SkyMaterial.gdshader" id="2_816jh"]
[ext_resource type="Texture2D" uid="uid://cfqk60lpl5ljv" path="res://addons/sky_3d/assets/resources/SNoise.tres" id="3_4w4sx"]
[ext_resource type="Texture2D" uid="uid://cecwdqjol0ckd" path="res://addons/sky_3d/assets/textures/noiseClouds.png" id="4_ahe1n"]
[ext_resource type="Texture2D" uid="uid://2r8ylu6rg5dp" path="res://addons/sky_3d/assets/thirdparty/textures/moon/MoonMap.png" id="5_y2b71"]
[ext_resource type="Texture2D" uid="uid://djpfuyxkryegn" path="res://addons/sky_3d/assets/textures/noise.jpg" id="6_ryox4"]
[ext_resource type="Texture2D" uid="uid://bm7dot7t7u1q4" path="res://addons/sky_3d/assets/thirdparty/textures/milkyway/StarField.jpg" id="7_bt1gx"]
[ext_resource type="Texture2D" uid="uid://c1vwcdcdvb74a" path="res://addons/sky_3d/assets/thirdparty/textures/milkyway/Milkyway.jpg" id="8_qe0by"]
[ext_resource type="Script" uid="uid://deo0gxkmk2ahd" path="res://addons/sky_3d/src/Sky3D.gd" id="9_vc2ux"]
[ext_resource type="Script" uid="uid://b4tkplvh7fq40" path="res://addons/sky_3d/src/SkyDome.gd" id="10_8pfkt"]
[ext_resource type="Script" uid="uid://cjmkcj8hwm7ts" path="res://addons/sky_3d/src/TimeOfDay.gd" id="11_uobck"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_qgiog"]
shader = ExtResource("2_816jh")
shader_parameter/sky_visible = true
shader_parameter/color_correction = Vector2(0, 1)
shader_parameter/ground_color = Color(0.3, 0.3, 0.3, 1)
shader_parameter/horizon_offset = 0.0
shader_parameter/atm_darkness = 0.5
shader_parameter/atm_sun_intensity = 18.0
shader_parameter/atm_day_tint = Color(0.807843, 0.909804, 1, 1)
shader_parameter/atm_horizon_light_tint = Color(0.980392, 0.635294, 0.462745, 1)
shader_parameter/atm_night_tint = Color(0, 0, 0, 0)
shader_parameter/atm_level_params = Vector3(1, 0, 0)
shader_parameter/atm_thickness = 0.7
shader_parameter/atm_beta_ray = Vector3(5.804544e-06, 1.3562913e-05, 3.311258e-05)
shader_parameter/atm_beta_mie = Vector3(3.038e-08, 3.038e-08, 3.038e-08)
shader_parameter/sun_disk_color = Color(0.996094, 0.541334, 0.140076, 1)
shader_parameter/sun_disk_intensity = 30.0
shader_parameter/sun_disk_size = 0.02
shader_parameter/atm_sun_mie_tint = Color(1, 1, 1, 1)
shader_parameter/atm_sun_mie_intensity = 1.0
shader_parameter/atm_sun_partial_mie_phase = Vector3(0.36, 1.64, 1.6)
shader_parameter/moon_color = Color(1, 1, 1, 1)
shader_parameter/moon_texture = ExtResource("5_y2b71")
shader_parameter/moon_texture_alignment = Vector3(7, 1.4, 4.8)
shader_parameter/moon_texture_flip_u = false
shader_parameter/moon_texture_flip_v = false
shader_parameter/moon_size = 0.07
shader_parameter/atm_moon_mie_tint = Color(0.137255, 0.184314, 0.292196, 1)
shader_parameter/atm_moon_mie_intensity = 0.0
shader_parameter/atm_moon_partial_mie_phase = Vector3(0.36, 1.64, 1.6)
shader_parameter/starmap_color = Color(0.709804, 0.709804, 0.709804, 0.854902)
shader_parameter/starmap_texture = ExtResource("8_qe0by")
shader_parameter/starmap_flip_u = false
shader_parameter/starmap_flip_v = false
shader_parameter/starmap_alignment = Vector3(2.68288, -0.25891, 0.40101)
shader_parameter/star_rotation_offset = 9.38899
shader_parameter/star_rotation = -10.899940873229054
shader_parameter/star_tilt = -1.2915436464758039
shader_parameter/star_field_color = Color(1, 1, 1, 1)
shader_parameter/star_field_texture = ExtResource("7_bt1gx")
shader_parameter/star_scintillation = 0.75
shader_parameter/star_scintillation_speed = 0.01
shader_parameter/noise_tex = ExtResource("6_ryox4")
shader_parameter/cirrus_visible = true
shader_parameter/cirrus_coverage = 0.5
shader_parameter/cirrus_thickness = 1.7
shader_parameter/cirrus_absorption = 2.0
shader_parameter/cirrus_sky_tint_fade = 0.5
shader_parameter/cirrus_intensity = 10.0
shader_parameter/cirrus_size = 1.0
shader_parameter/cirrus_uv = Vector2(0.16, 0.11)
shader_parameter/cirrus_position1 = Vector2(0.00023333335, 8.5708124e-10)
shader_parameter/cirrus_position2 = Vector2(0.00023333335, 8.5708124e-10)
shader_parameter/cirrus_day_color = Color(0.824, 0.875, 1, 1)
shader_parameter/cirrus_horizon_light_color = Color(0.98, 0.43, 0.15, 1)
shader_parameter/cirrus_night_color = Color(0.09, 0.094, 0.129, 1)
shader_parameter/cirrus_texture = ExtResource("3_4w4sx")
shader_parameter/cumulus_visible = true
shader_parameter/cumulus_coverage = 0.55
shader_parameter/cumulus_thickness = 0.0243
shader_parameter/cumulus_absorption = 2.0
shader_parameter/cumulus_noise_freq = 2.7
shader_parameter/cumulus_sky_tint_fade = 0.0
shader_parameter/cumulus_intensity = 0.6
shader_parameter/cumulus_size = 0.5
shader_parameter/cumulus_position = Vector2(0.0011666667, 4.2854063e-09)
shader_parameter/cumulus_texture = ExtResource("4_ahe1n")
shader_parameter/cumulus_day_color = Color(0.823529, 0.87451, 1, 1)
shader_parameter/cumulus_horizon_light_color = Color(0.98, 0.43, 0.15, 1)
shader_parameter/cumulus_night_color = Color(0.090196, 0.094118, 0.129412, 1)
shader_parameter/cumulus_partial_mie_phase = Vector3(0.957564, 1.042436, 0.412)
shader_parameter/cumulus_mie_intensity = 1.0
shader_parameter/show_azimuthal_grid = false
shader_parameter/azimuthal_grid_color = Color(0.87058824, 0.72156864, 0.5294118, 1)
shader_parameter/azimuthal_grid_rotation_offset = 0.03
shader_parameter/show_equatorial_grid = false
shader_parameter/equatorial_grid_color = Color(0, 0.75, 1, 1)
shader_parameter/equatorial_grid_rotation_offset = 0.03
shader_parameter/moon_matrix = Basis(-1.4901161e-08, -0.7168115, 0.69726694, -0.90044105, 0.3032958, 0.3117973, -0.434978, -0.6278478, -0.64544654)

[sub_resource type="Sky" id="Sky_0j4pb"]
sky_material = SubResource("ShaderMaterial_qgiog")

[sub_resource type="Environment" id="Environment_lf8rx"]
background_mode = 2
sky = SubResource("Sky_0j4pb")
ambient_light_source = 3
ambient_light_color = Color(1, 1, 1, 1)
reflected_light_source = 2
tonemap_mode = 3
tonemap_white = 6.0

[sub_resource type="CameraAttributesPractical" id="CameraAttributesPractical_bugj6"]

[node name="Environment" type="Node3D"]
visible = false

[node name="PrimitivesCity" parent="." instance=ExtResource("1_2bg0m")]
visible = false

[node name="ReflectionProbe" type="ReflectionProbe" parent="."]
visible = false
update_mode = 1
size = Vector3(2000, 2000, 2000)
origin_offset = Vector3(0, 5, 0)

[node name="Sky3D" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_lf8rx")
camera_attributes = SubResource("CameraAttributesPractical_bugj6")
script = ExtResource("9_vc2ux")
current_time = 13.199066666669554
wind_speed = 7.000000000000001
wind_direction = 1.5708
metadata/_custom_type_script = "uid://deo0gxkmk2ahd"

[node name="SunLight" type="DirectionalLight3D" parent="Sky3D"]
transform = Transform3D(0, -0.94793403, -0.3184667, 0.64852715, -0.24241413, 0.72155935, -0.7611915, -0.2065343, 0.614761, -0.3184667, 0.72155935, 0.614761)
shadow_enabled = true
directional_shadow_blend_splits = true
directional_shadow_max_distance = 600.0

[node name="MoonLight" type="DirectionalLight3D" parent="Sky3D"]
transform = Transform3D(0, -0.9929124, 0.118848614, -0.68021023, -0.08711806, -0.72782177, 0.733017, -0.08084204, -0.67538923, 0.11884861, -0.7278217, -0.6753892)
light_color = Color(0.572549, 0.776471, 0.956863, 1)
light_energy = 0.0
directional_shadow_blend_splits = true
directional_shadow_max_distance = 256.0

[node name="SkyDome" type="Node" parent="Sky3D"]
script = ExtResource("10_8pfkt")
sun_azimuth = -3.6195626
sun_altitude = -0.7647444
moon_azimuth = -0.17418723
moon_altitude = -2.3859365
fog_density = 0.01
wind_speed = 7.000000000000001
wind_direction = 1.5708

[node name="TimeOfDay" type="Node" parent="Sky3D"]
script = ExtResource("11_uobck")
dome_path = NodePath("../SkyDome")
current_time = 13.199066666669554
